refactor: dto 내부 stream toList()로 수정